# TechnicalAnalysis

./: .gitignore  setup.cfg  setup.py
src/trading/: Bollinger Band.ipynb  Data.py  Graphs.ipynb  MA.py  MovingAverageCrossover.ipynb  OSCILLATOR .ipynb  SimpleMovingAverages.ipynb  Stock.csv  TestData.csv  Tradingview.ipynb  test.py
src/trading/data/: IntraDay_2021_FEB_NIFTY.csv
