[metadata]

name = Trading
version = attr: src.VERSION
author	= 	Nikhil Vijayakumar
author_email =	nikhil.vijaykumar@gmail.com
maintainer	 = Nikhil Vijayakumar
maintainer_email = nikhil.vijaykumar@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
packages = find:
package_dir = =src

[options.packages.find]
where=src
